--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   shared_preferences: ^0.5.1+1
   rxdart: ^0.21.0
   google_maps_flutter: ^0.4.0
+  geolocator: '^3.0.1'
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
