--- a/android/build.gradle
+++ b/android/build.gradle
@@ -23,7 +23,24 @@ subprojects {
 subprojects {
     project.evaluationDependsOn(':app')
 }
-
+subprojects {
+    project.configurations.all {
+        resolutionStrategy.eachDependency { details ->
+            if (details.requested.group == 'com.google.android.gms'
+                    && !details.requested.name.contains('multidex')) {
+                details.useVersion "15.0.1"
+            }
+            // if (details.requested.group == 'com.google.android.gms'
+            //         && details.requested.name.contains('play-services-base')) {
+            //     details.useVersion "15.0.1"
+            // }
+            // if (details.requested.group == 'com.google.android.gms'
+            //         && details.requested.name.contains('play-services-tasks')) {
+            //     details.useVersion "15.0.1"
+            // }
+        }
+    }
+}
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
