--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   rxdart: ^0.21.0
   google_maps_flutter: ^0.4.0
   location: ^1.4.1
+  rubber: ^0.2.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
