--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,12 @@ dependencies:
     sdk: flutter
   http: ^0.12.0+1
   shared_preferences: ^0.5.1+1
-  rxdart: ^0.21.0
+  rxdart: ^0.20.0
   google_maps_flutter: ^0.4.0
   location: ^1.4.1
   rubber: ^0.2.7
+  flutter_google_places: ^0.2.1
+  google_maps_webservice: ^0.0.12
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
