--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,9 +47,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/ravehanpark.jpg
     - assets/event.jpg
-    - assets/parker.jpg
+    - assets/avatar.png
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
