--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,8 +48,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/ravehanpark.jpg
     - assets/event.jpg
-    - assets/avatar.png
+    - assets/parker.jpg
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
