--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_google_places: ^0.2.1
   google_maps_webservice: ^0.0.12
   intl: ^0.15.8
+  percent_indicator: ^1.0.14
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
