--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,9 +49,16 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/event.jpg
     - assets/avatar.png
     - assets/clark_ad_1.jpg
+    - assets/clark_ad_2.jpg
+    - assets/clark_ad_3.jpg
+    - assets/clark_ad_4.jpg
+    - assets/clark_ad_5.jpg
+    - assets/event_pic_1.jpg
+    - assets/event_pic_2.jpg
+    - assets/event_pic_3.jpg
+    - assets/event_pic_4.jpg
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
